# zelligent

./: AGENTS.md  README.md  TODO-docs-harness-followup.md  build-release.sh  default-layout.kdl  dev-install.sh  test.sh  zelligent.sh
.claude/: settings.json
plugin/: .gitignore  Cargo.toml  TESTING.md  build.rs
plugin/src/: lib.rs  main.rs  ui.rs
plugin/tests/: render_snapshots.rs
plugin/tests/common/: mod.rs
plugin/tests/snapshots/: render_snapshots__flow_branch_picker.snap  render_snapshots__flow_branch_picker.snap.new  render_snapshots__flow_branch_picker_after_j.snap  render_snapshots__flow_browse_after_j.snap  render_snapshots__flow_browse_after_jj.snap  render_snapshots__flow_browse_initial.snap  render_snapshots__flow_browse_initial.snap.new  render_snapshots__flow_confirm_delete.snap  render_snapshots__flow_confirm_delete.snap.new  render_snapshots__flow_input_after_backspace.snap  render_snapshots__flow_input_empty.snap  render_snapshots__flow_input_empty.snap.new  render_snapshots__flow_input_typed.snap  render_snapshots__render_browse_all_idle.snap  render_snapshots__render_browse_all_idle.snap.new  render_snapshots__render_browse_clips_labels_to_viewport_width.snap  render_snapshots__render_browse_empty.snap  render_snapshots__render_browse_empty.snap.new  render_snapshots__render_browse_mixed_dir_branch_names.snap  render_snapshots__render_browse_mixed_dir_branch_names.snap.new  render_snapshots__render_browse_with_agent_statuses.snap  render_snapshots__render_browse_with_agent_statuses.snap.new  render_snapshots__render_browse_with_done_status.snap  (+35 more)
(+52 files in other folders)
