[package]
name = "zelligent-plugin"
version = "0.0.0-dev"
edition = "2021"

[lib]
name = "zelligent_plugin"
path = "src/lib.rs"

[[bin]]
name = "zelligent-plugin"
path = "src/main.rs"

[dependencies]
zellij-tile = { git = "https://github.com/zellij-org/zellij", branch = "main" }

# Dev-deps are only needed for host-side tests/snapshots and are not used in the wasm release build.
[dev-dependencies]
insta = "1.46"
