[package]
name = "zelligent-plugin"
version = "0.0.0-dev"
edition = "2021"

[lib]
name = "zelligent_plugin"
path = "src/lib.rs"

[[bin]]
name = "zelligent-plugin"
path = "src/main.rs"

[dependencies]
zellij-tile = "0.43"
unicode-width = "0.2"

# Dev-deps are only needed for host-side tests/snapshots. The main dependencies above are used in the wasm build.
[dev-dependencies]
insta = "1.46"
